# camera_lidar_fusion

./: CMakeLists.txt  README.md  package.xml
config/: colorizer.yaml
include/lidar_camera_colorizer/: calibration.hpp
launch/: colorize.launch.py  demo.launch.py
rviz/: colorized_pointcloud.rviz
src/: calib_tf_publisher.cpp  calibration.cpp  colorize_node.cpp  demo_publisher.cpp
